Additional assembly route implemented

--- a/ComponentLibrary/Component1.razor
+++ b/ComponentLibrary/Component1.razor
@@ -1,3 +1,5 @@
-﻿<div class="my-component">
+﻿@page "/Component1"
+
+<div class="my-component">
     This component is defined in the <strong>ComponentLibrary</strong> library.
 </div>
